Cleanup; fix sidebar z-index due charts

--- a/src/app/assets/style.less
+++ b/src/app/assets/style.less
@@ -130,7 +130,7 @@ a {
 .sidebar {
   top: 0;
   right: 0;
-  z-index: 2;
+  z-index: 7;
   height: 100%;
   min-width: 32px;
   overflow: hidden;
@@ -229,6 +229,18 @@ a {
       width: 110%;
       padding-right: 10%;
       height: ~"calc(100vh - 34px)";
+    }
+
+    li {
+      .item {
+        cursor: pointer;
+      }
+
+      small {
+        z-index: 7;
+        position: relative;
+        background-color: @DarkNavy;
+      }
     }
   }
 
